--- a/BackEndCapstone/Views/Products/Index.cshtml
+++ b/BackEndCapstone/Views/Products/Index.cshtml
@@ -15,18 +15,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImagePath)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateAdded)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UserId)
-            </th>
+       
             <th>
                 @Html.DisplayNameFor(model => model.ProductType)
             </th>
@@ -40,17 +29,11 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
 
+
+         
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateAdded)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserId)
-            </td>
-            <td>
-                <img class="img-responsive" src="@Url.Content("~/images/" + item.ImagePath)" alt="" />
+                <img style="max-height: 70px; min-height: 60px;" class="img-responsive" src="@Url.Content("~/images/" + item.ImagePath)" alt="" />
+ 
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductType.Category)
