--- a/BackEndCapstone/Views/Gemstones/Edit.cshtml
+++ b/BackEndCapstone/Views/Gemstones/Edit.cshtml
@@ -20,8 +20,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="File" class="control-label"></label>
-                <input asp-for="File" type="file" class="form-control" />
-                <span asp-validation-for="File" class="text-danger"></span>
+                <input asp-for="File" type="file" class="form-control" value="ImagePath" />
+                <img class="img-responsive" src="@Url.Content("~/images/" + Model.ImagePath)" alt="" style="max-width:150px" />
+
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
