got the product create method working

--- a/BackEndCapstone/Views/Products/Create.cshtml
+++ b/BackEndCapstone/Views/Products/Create.cshtml
@@ -23,7 +23,7 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="DateAdded" class="control-label"></label>
                 <input asp-for="DateAdded" class="form-control" />
                 <span asp-validation-for="DateAdded" class="text-danger"></span>
@@ -32,10 +32,13 @@
                 <label asp-for="UserId" class="control-label"></label>
                 <input asp-for="UserId" class="form-control" />
                 <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="ProductTypeId" class="control-label"></label>
-                <select asp-for="ProductTypeId" class="form-control" asp-items="ViewBag.ProductTypeId"></select>
+                <select asp-for="ProductTypeId" class="form-control" asp-items="ViewBag.ProductTypeId">
+                    <option disabled selected>--- SELECT ---</option>
+                </select>
+                @Html.ValidationMessageFor(m => m.ProductTypeId)
             </div>
             <div class="form-group">
                 <label asp-for="File" class="control-label"></label>
