--- a/BackEndCapstone/Views/Tutorials/Edit.cshtml
+++ b/BackEndCapstone/Views/Tutorials/Edit.cshtml
@@ -29,6 +29,9 @@
                 <label asp-for="File" class="control-label"></label>
                 <input asp-for="File" type="file" class="form-control" />
                 <span asp-validation-for="File" class="text-danger"></span>
+                <source src="@Url.Content("~/videos/" + Model.VideoPath)" type="video/mp4">
+
+
             </div>
 
             <div class="form-group">
