got that stupid welcome message off the home page

--- a/BackEndCapstone/Views/Home/Index.cshtml
+++ b/BackEndCapstone/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Jewelry By Aryn</h1>
+    <p>Add some sort of meaningful quote or trendy catch phrase here</a>.</p>
 </div>
