--- a/BackEndCapstone/Views/Tutorials/Details.cshtml
+++ b/BackEndCapstone/Views/Tutorials/Details.cshtml
@@ -21,16 +21,20 @@
             <source src="@Url.Content("~/videos/" + Model.VideoPath)" type="video/mp4">
         </video>
 
-       
+
         <dd class="col-sm-7">
             @Html.DisplayFor(model => model.Description)
         </dd>
- 
+
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DateAdded)
         </dd>
 
-
+        <dt class="order-sm-10">
+            <form asp-action="Index" asp-controller="TutorialReviews" asp-route-breweryId="@Model.Id">
+                <button>View Comments</button>
+            </form>
+        </dt>
 
 
     </dl>
