--- a/BackEndCapstone/Views/Products/Details.cshtml
+++ b/BackEndCapstone/Views/Products/Details.cshtml
@@ -42,11 +42,20 @@
             @Html.DisplayFor(model => model.ProductType.Category)
         </dd>*@
 
+        <dt class=" col-sm-2">Reviews</dt>
+        <dd class="col-sm-10">
+            <div>
+                @foreach (var product in Model.ProductReviews)
+                {
+                    <li>@Html.DisplayFor(modelItem => product.Comment)</li>
+                }
+            </div>
+        </dd>
     </dl>
 </div>
 <div>
     @*<a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |*@
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-
+    <a asp-controller="ProductReviews" asp-action="Create" asp-route-id="@Model.Id">Add Comment</a>
     <a asp-action="Index">Back to List</a>
 </div>
