--- a/BackEndCapstone/Views/Tutorials/Details.cshtml
+++ b/BackEndCapstone/Views/Tutorials/Details.cshtml
@@ -29,10 +29,18 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DateAdded)
         </dd>
-
+        <dt class=" col-sm-2">Reviews</dt>
+        <dd class="col-sm-10">
+            <div>
+                @foreach (var tutorial in Model.TutorialReviews)
+                {
+                    <li>@Html.DisplayFor(modelItem => tutorial.Comment)</li>
+                }
+            </div>
+        </dd>
 
         <dt class="order-sm-10">
-            <form asp-action="Index" asp-controller="TutorialReviews" asp-route-breweryId="@Model.Id">
+            <form asp-action="Index" asp-controller="TutorialsReview" asp-route-breweryId="@Model.Id">
                 <button>View Comments</button>
             </form>
         </dt>
@@ -40,6 +48,7 @@
 
     </dl>
 </div>
+
 @*<div>
 
     <h4>Comments</h4>
