added delete for product type

--- a/BackEndCapstone/Views/ProductTypes/Details.cshtml
+++ b/BackEndCapstone/Views/ProductTypes/Details.cshtml
@@ -31,8 +31,10 @@
             </tr>
             }
         <td>
-           
+
             <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+            <a asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
+
             <a asp-action="Index">Back to List</a>
         </td>
         </tbody>
