--- a/BackEndCapstone/Views/ProductTypes/Details.cshtml
+++ b/BackEndCapstone/Views/ProductTypes/Details.cshtml
@@ -26,8 +26,13 @@
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
                 <td>
-                <img style="max-height: 90px; min-height: 80px;" class="img-responsive" src="@Url.Content("~/images/" + item.ImagePath)" alt="" />
+                    <img style="max-height: 90px; min-height: 80px;" class="img-responsive" src="@Url.Content("~/images/" + item.ImagePath)" alt="" />
                 </td>
+                <td>
+                    <a asp-action="Details" asp-route-id="@Model.Id" asp-controller="Products">Details</a>
+                </td>
+
+              
             </tr>
             }
         <td>
