--- a/BackEndCapstone/Views/Products/Edit.cshtml
+++ b/BackEndCapstone/Views/Products/Edit.cshtml
@@ -37,14 +37,14 @@
         </div>
         <div class="form-group">
             <label asp-for="UserId" class="control-label"></label>
-            <input asp-for="UserId" class="form-control" />
+            <input asp-for="UserId" class="form-control" />*@
             <span asp-validation-for="UserId" class="text-danger"></span>
-        </div>*@
-            @*<div class="form-group">
-            <label asp-for="ProductTypeId" class="control-label"></label>
-            <select asp-for="ProductTypeId" class="form-control" asp-items="ViewBag.ProductTypeId"></select>
-            <span asp-validation-for="ProductTypeId" class="text-danger"></span>
-        </div>*@
+
+            <div class="form-group">
+                <label asp-for="ProductTypeId" class="control-label"></label>
+                <select asp-for="ProductTypeId" class="form-control" asp-items="ViewBag.ProductTypeId"></select>
+                <span asp-validation-for="ProductTypeId" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
