got comments create to stop throwin errors

--- a/BackEndCapstone/Views/Tutorials/Details.cshtml
+++ b/BackEndCapstone/Views/Tutorials/Details.cshtml
@@ -67,5 +67,6 @@
 <a asp-action="Create" asp-route-id="@Model.Id" asp-controller="TutorialsReview">Leave A Comment!</a> |
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
     <a asp-action="Index">Back to List</a>
 </div>
