--- a/BackEndCapstone/Views/ProductReviews/Create.cshtml
+++ b/BackEndCapstone/Views/ProductReviews/Create.cshtml
@@ -32,13 +32,13 @@
             <input asp-for="DateAdded" class="form-control" />
             <span asp-validation-for="DateAdded" class="text-danger"></span>
         </div>*@
-            @if (ViewBag.productId != null)
+            @*@if (ViewBag.productId != null)
             {
                 <div class="form-group">
                     <label asp-for="ProductId" class="control-label"></label>
                     <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
                 </div>
-            }
+            }*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
