--- a/BackEndCapstone/Views/Products/Details.cshtml
+++ b/BackEndCapstone/Views/Products/Details.cshtml
@@ -56,6 +56,8 @@
 <div>
     @*<a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |*@
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
+
     <a asp-controller="ProductReviews" asp-action="Create" asp-route-id="@Model.Id">Add Comment</a>
     <a asp-action="Index">Back to List</a>
 </div>
