--- a/BackEndCapstone/Views/ProductReviews/Create.cshtml
+++ b/BackEndCapstone/Views/ProductReviews/Create.cshtml
@@ -23,22 +23,29 @@
             <span asp-validation-for="ProductId" class="text-danger"></span>
         </div>*@
             <div class="form-group">
+                <label asp-for="User.Email" class="control-label"></label>
+                <input asp-for="User.Email" class="form-control" />
+                <span asp-validation-for="User.Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Comment" class="control-label"></label>
                 <input asp-for="Comment" class="form-control" />
                 <span asp-validation-for="Comment" class="text-danger"></span>
             </div>
+
             @*<div class="form-group">
             <label asp-for="DateAdded" class="control-label"></label>
             <input asp-for="DateAdded" class="form-control" />
             <span asp-validation-for="DateAdded" class="text-danger"></span>
         </div>*@
             @*@if (ViewBag.productId != null)
-            {
-                <div class="form-group">
-                    <label asp-for="ProductId" class="control-label"></label>
-                    <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
-                </div>
-            }*@
+        {
+            <div class="form-group">
+                <label asp-for="ProductId" class="control-label"></label>
+                <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
+            </div>
+        }*@
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
