--- a/BackEndCapstone/Views/Products/Details.cshtml
+++ b/BackEndCapstone/Views/Products/Details.cshtml
@@ -29,43 +29,55 @@
             @Html.DisplayFor(model => model.DateAdded)
         </dd>
         @*<dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserId)
-        </dd>*@
+                @Html.DisplayNameFor(model => model.UserId)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.UserId)
+            </dd>*@
 
         @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductType)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductType.Category)
-        </dd>*@
+                @Html.DisplayNameFor(model => model.ProductType)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ProductType.Category)
+            </dd>*@
     </dl>
+    <dt class="col-sm-2">
+        Genres
+    </dt>
+    <dd class="col-sm-10">
+        @foreach (var item in Model.ProductGemstones)
+        {
+            <div>
+                @Html.DisplayFor(modelItem => item.Gemstone.Title) &nbsp;
+            </div>
+        }
+    </dd>
+    
 
-        <h4>Reviews</h4>
-        <hr />
-        <dl class="row">
-          
-            
-                @foreach (var product in Model.ProductReviews)
-                {
-                    <dt class="col-sm-2">
-                        @Html.DisplayNameFor(modelItem => product.User.Email)
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Html.DisplayFor(modelItem => product.User.Email)
-                    </dd>
-                    <dt class="col-sm-2">
-                        @Html.DisplayNameFor(modelItem => product.Comment)
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Html.DisplayFor(modelItem => product.Comment)
-                    </dd>
-             
-                }
-            
-          </dl>
+    <h4>Reviews</h4>
+    <hr />
+    <dl class="row">
+
+
+        @foreach (var product in Model.ProductReviews)
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(modelItem => product.User.FirstName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(modelItem => product.User.FirstName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(modelItem => product.Comment)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(modelItem => product.Comment)
+            </dd>
+
+        }
+
+    </dl>
 
 </div>
 <div>
