--- a/BackEndCapstone/Views/Products/Create.cshtml
+++ b/BackEndCapstone/Views/Products/Create.cshtml
@@ -25,18 +25,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="GemstoneIds" class="control-label"></label>
-                <select multiple asp-for="GemstoneIds" class="form-control" asp-items="ViewBag.ProductGemstone"></select>
+                <select multiple asp-for="GemstoneIds" class="form-control" asp-items="ViewBag.Gemstone">
+                    <option disabled selected>--- SELECT ---</option>
+                </select>
             </div>
-            @*<div class="form-group">
-            <label asp-for="DateAdded" class="control-label"></label>
-            <input asp-for="DateAdded" class="form-control" />
-            <span asp-validation-for="DateAdded" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="UserId" class="control-label"></label>
-            <input asp-for="UserId" class="form-control" />
-            <span asp-validation-for="UserId" class="text-danger"></span>
-        </div>*@
             <div class="form-group">
                 <label asp-for="ProductTypeId" class="control-label"></label>
                 <select asp-for="ProductTypeId" class="form-control" asp-items="ViewBag.ProductTypeId">
