--- a/BackEndCapstone/Views/Shared/_Layout.cshtml
+++ b/BackEndCapstone/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="ProductTypes" asp-action="Index">View Jewelry</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tutorials" asp-action="Index">Tutorials</a>
                         </li>
                         <li class="nav-item">
