styled pictures on producct details a bit

--- a/BackEndCapstone/Views/Products/Details.cshtml
+++ b/BackEndCapstone/Views/Products/Details.cshtml
@@ -16,7 +16,7 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <img class="img-responsive" src="@Url.Content("~/images/" + Model.ImagePath)" alt="" />
+        <img style="max-height: 250px; min-height: 240px; "class="img-responsive" src="@Url.Content("~/images/" + Model.ImagePath)" alt="" />
         <dt class="col-sm-2">
         </dt>
         <dd class="col-sm-10">
