--- a/BackEndCapstone/Views/Products/Index.cshtml
+++ b/BackEndCapstone/Views/Products/Index.cshtml
@@ -4,46 +4,42 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Products</h1>
+
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-       
-            <th>
-                @Html.DisplayNameFor(model => model.ProductType)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
+
+
+    
+
 @foreach (var item in Model) {
-        <tr>
-            <td>
+        <div class="card" style="width: 15rem;">
+            <img style="max-height: 260px; min-height: 250px;" class="card-img-top" src="@Url.Content("~/images/" + item.ImagePath)" alt="Card Img" />
+            <div class="card-body">
+                <h5 class="card-title">@item.Title</h5>
+                <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
+            </div>
+
+
+
+
+
+@*<td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
-
-
-         
             <td>
-                <img style="max-height: 70px; min-height: 60px;" class="img-responsive" src="@Url.Content("~/images/" + item.ImagePath)" alt="" />
- 
+                <img style="max-height: 70px; min-height: 60px;" class="card-img-top" src="@Url.Content("~/images/" + item.ImagePath)" alt="Card Img" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductType.Category)
             </td>
-            <td>
+            <td>*@
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
+                @*<a asp-action="Details" asp-route-id="@item.Id">Details</a>*@ 
                 @*<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
-            </td>
-        </tr>
+            
+        </div>
 }
-    </tbody>
-</table>
+   
