--- a/BackEndCapstone/Views/ProductReviews/Create.cshtml
+++ b/BackEndCapstone/Views/ProductReviews/Create.cshtml
@@ -4,49 +4,24 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Add Comment:</h1>
 
-<h4>ProductReview</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
-            <label asp-for="UserId" class="control-label"></label>
-            <input asp-for="UserId" class="form-control" />
-            <span asp-validation-for="UserId" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="ProductId" class="control-label"></label>
-            <input asp-for="ProductId" class="form-control" />
-            <span asp-validation-for="ProductId" class="text-danger"></span>
-        </div>*@
-            <div class="form-group">
-                <label asp-for="User.Email" class="control-label"></label>
-                <input asp-for="User.Email" class="form-control" />
-                <span asp-validation-for="User.Email" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
+                <input type="text" asp-for="Comment" class="form-control" />
                 <span asp-validation-for="Comment" class="text-danger"></span>
             </div>
-
-            @*<div class="form-group">
-            <label asp-for="DateAdded" class="control-label"></label>
-            <input asp-for="DateAdded" class="form-control" />
-            <span asp-validation-for="DateAdded" class="text-danger"></span>
-        </div>*@
-            @*@if (ViewBag.productId != null)
-        {
-            <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
-            </div>
-        }*@
+         
 
             <div class="form-group">
+
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
