--- a/BackEndCapstone/Views/Products/Index.cshtml
+++ b/BackEndCapstone/Views/Products/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<BackEndCapstone.Models.Product>
+﻿
+
+@model IEnumerable<BackEndCapstone.Models.Product>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,9 +15,9 @@
 
 
     
-
+<div class="productContainer">
 @foreach (var item in Model) {
-        <div class="card" style="width: 15rem;">
+        <div class="card productCard" style="width: 15rem;">
             <img style="max-height: 260px; min-height: 230px;" class="card-img-top" src="@Url.Content("~/images/" + item.ImagePath)" alt="Card Img" />
             <div class="card-body">
                 <h7 class="card-title">@item.Title</h7>
@@ -30,4 +32,5 @@
             
         </div>
 }
+    </div>
    
