--- a/BackEndCapstone/wwwroot/css/site.css
+++ b/BackEndCapstone/wwwroot/css/site.css
@@ -69,3 +69,23 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+.card prouctContainer {
+    display: flex !important;
+    justify-content: center;
+    /* You can set flex-wrap and
+       flex-direction individually */
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.prouctContainer {
+ 
+    display: flex !important;
+    justify-content: center;
+    /* You can set flex-wrap and
+       flex-direction individually */
+    flex-direction: row;
+    flex-wrap: wrap;
+}
