--- a/BackEndCapstone/Views/Products/Index.cshtml
+++ b/BackEndCapstone/Views/Products/Index.cshtml
@@ -10,27 +10,29 @@
 
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
 
 
     
 <div class="productContainer">
-@foreach (var item in Model) {
-        <div class="card productCard" style="width: 15rem;">
-            <img style="max-height: 260px; min-height: 230px;" class="card-img-top" src="@Url.Content("~/images/" + item.ImagePath)" alt="Card Img" />
-            <div class="card-body">
-                <h7 class="card-title">@item.Title</h7>
-                <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
-            </div>
+    <div class="row justify-content-between">
+        @foreach (var item in Model)
+        {
+            <div class="card productCard" style="width: 15rem; margin-bottom: 3rem; margin-left: 1.5rem;">
+                <img style="max-height: 260px; min-height: 230px;" class="card-img-top" src="@Url.Content("~/images/" + item.ImagePath)" alt="Card Img" />
+                <div class="card-body">
+                    <h7 class="card-title">@item.Title</h7>
+                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
+                </div>
 
 
 
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
-                @*<a asp-action="Details" asp-route-id="@item.Id">Details</a>*@ 
+                @*<a asp-action="Details" asp-route-id="@item.Id">Details</a>*@
                 @*<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
-            
+
+            </div>
+        }
         </div>
-}
     </div>
-   
