--- a/BackEndCapstone/Views/Shared/_Layout.cshtml
+++ b/BackEndCapstone/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Gemstones" asp-action="Index">Gemstones</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="WishList">WishList</a>
                         </li>
                     </ul>
                 </div>
