--- a/BackEndCapstone/wwwroot/css/site.css
+++ b/BackEndCapstone/wwwroot/css/site.css
@@ -97,3 +97,25 @@ body {
 .w-100 {
     height: 450px !important;
 }
+
+.carousel img {
+    width: 100% !important;
+    min-width: 100% !important;
+}
+
+@media (min-width: 1200px !important) {
+    .container {
+        max-width: 1300px !important;
+    }
+}
+
+.container-slider {
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-right: 0;
+    margin-left: 0;
+}
+
+body {
+    font-family: inherit !important;
+}
