styled home page

--- a/BackEndCapstone/Views/Home/Index.cshtml
+++ b/BackEndCapstone/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
 <div class="container">
     <div class="row align-items-center">
         <div class="col-6" style="width:400px">
-            <img src="~/images/home8.png" style="width:500px" >
+            <img src="~/images/home8.png" style="width:500px">
         </div>
         <div class="col-6" style="width:400px">
             <p>
@@ -50,6 +50,25 @@
                 retail markups by shipping all orders directly to the customer, usually within 5 business days.
             </p>
         </div>
+        <br />
     </div>
+    <div class="row align-items-center">
+        <div class="col-6" style="width:400px">
+          <p>  We craft our jewelry with only the finest precious gemstones. for more information check out our gemstones page! </p>
+        </div>
+        <div class="col-6" style="width:400px">
+            <img src="~/images/gamstones.jpg" style="width:500px">
+        </div>
+    </div>
+    <br />
+    <div class="row align-items-center">
+        <div class="col-6 align-items-center" style="width:400px">
+            <img src="~/images/contact.png" style="width:500px">
+        </div>
+        <div class="col-6" style="width:400px">
+            <h6>Contact Us:</h6>
+            <p><u>Phone:</u> (615)428-4487</p>
+            <p><u>Email:</u> WeatherlyDesigns1@gmail.com</p>
+       </div>
     </div>
 
