styled the products and gemstones pages

--- a/BackEndCapstone/Views/Products/Details.cshtml
+++ b/BackEndCapstone/Views/Products/Details.cshtml
@@ -14,8 +14,7 @@
             @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
+str        </dd>
         <img style="max-height: 350px; min-height: 340px; " class="img-responsive" src="@Url.Content("~/images/" + Model.ImagePath)" alt="" />
         <dt class="col-sm-2">
         </dt>
