--- a/BackEndCapstone/Views/Gemstones/Index.cshtml
+++ b/BackEndCapstone/Views/Gemstones/Index.cshtml
@@ -3,13 +3,42 @@
 @{
     ViewData["Title"] = "Index";
 }
+<div>
+    <div style="text-align: center">
+        <img align="center" src="~/images//gemstones2.png" alt="books" style="max-height: 300px; min-height: 175px; max-width:1300px; min-width:1100px;">  &nbsp;
+    </div>
 
+</div>
+<hr />
+<br />
 <h1>Gemstones</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<hr />
+
+
+<div class="productContainer">
+    <div class="row justify-content-between">
+        @foreach (var item in Model)
+        {
+            <div class="card productCard" style="width: 15rem; margin-bottom: 3rem; margin-left: 1.5rem;">
+                <img style="max-height: 200px; min-height: 90px;" class="img-responsive" src="@Url.Content("~/images/" + item.ImagePath)" alt="" />
+                <div class="card-body">
+                    <h7 class="card-title">@item.Title</h7>
+                    <hr />
+                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+
+
+
+
+@*<table class="table">
     <thead>
         <tr>
             <th>
@@ -22,24 +51,25 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-            <img style="max-height: 100px; min-height: 90px;" class="img-responsive" src="@Url.Content("~/images/" + item.ImagePath)" alt="" />
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    <img style="max-height: 100px; min-height: 90px;" class="img-responsive" src="@Url.Content("~/images/" + item.ImagePath)" alt="" />
                 </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
-                @*<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                <td>*@
+@*@Html.DisplayFor(modelItem => item.Description)
+    </td>
+    <td>*@
+@*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
+
+@*<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+@*</td>
+                </tr>
+            }
+        </tbody>
+    </table>*@
